--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "description": "convert flowcharts to code instantly",
   "main": "index.js",
   "scripts": {
-       "dev": "concurrently \"cd backend && npm run dev\" \"cd frontend && npm start\" "
-   },
-
+    "dev": "concurrently \"cd backend && npm run dev\" \"cd frontend && npm start\" ",
+    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "server": "nodemon --watch backend/server.js --exec node backend/server.js",
+    "client": "npm start --prefix frontend"
+  },
+  "devDependencies": {
+    "concurrently": "^7.0.0",
+    "nodemon": "^3.1.9"
+  },
   "repository": {
     "type": "git",
     "url": "flow2code"
   },
   "author": "Daksh Joshi",
-  "license": "ISC",
-  "devDependencies": {
-    "concurrently": "^9.1.2"
-  }
+  "license": "ISC"
 }
