--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "jsplumb": "^2.15.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-resizable": "^3.0.5",
     "react-scripts": "5.0.1"
   },
   "scripts": {
